--- a/src/components/featuredProduct/featuredProduct.css
+++ b/src/components/featuredProduct/featuredProduct.css
@@ -15,6 +15,7 @@
     width: 300px;
     border: 2px solid black;
     margin: 0 auto;
+    background-size: cover;
 }
 
 #featured-project-modal-wrapper button {
@@ -41,8 +42,9 @@
     }
 
     #featured-project-modal-picture-wrapper {
-        width: 70vw;
+        width: 80vw;
         height: 175px;
+        background-size: cover;
     }
 
     #featured-project-modal-wrapper button {
